# fbx

./: Cargo.toml  README.md
.github/workflows/: main.yml
examples/: fbx_structure.rs
src/: lib.rs  raw.rs
tests/: 7400_cam_cube_light.fbx  tests.rs
